--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -74,7 +74,10 @@
                         <div class="text-data pd-20-0">Or you can join with</div>
 
                         <div class="login-other-method">
-                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="#"></a></img>
+                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a
+                                href="#"></a></img><img src="assets\img\icons8-facebook-48.png" alt=""><a
+                                href="#"></a></img><img src="assets\img\icons8-twitter-circled-48.png" alt=""><a
+                                href="#"></a></img>
                         </div>
                     </div>
 
