--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -46,8 +46,7 @@
                                     <div class="input-data">
 
 
-                                        <input type="password" id="input-password" placeholder="Password"
-                                            name="password">
+                                        <input type="password" id="input-password" placeholder="Password" name="password">
                                     </div>
 
 
@@ -66,7 +65,7 @@
 
 
                         <div class="btn">
-                            <button class="btn-login" onclick="login()">Login Now</button>
+                            <button class="btn-login"  onclick="login()">Login Now</button>
                             <button class="btn-create-account">Create Account</button>
                         </div>
 
@@ -74,10 +73,9 @@
                         <div class="text-data pd-20-0">Or you can join with</div>
 
                         <div class="login-other-method">
-                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a
-                                href="#"></a></img><img src="assets\img\icons8-facebook-48.png" alt=""><a
-                                href="#"></a></img><img src="assets\img\icons8-twitter-circled-48.png" alt=""><a
-                                href="#"></a></img>
+                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="#"></a></img>
+                            <img src="assets\img\icons8-facebook-48.png" alt=""><a href="#"></a></img>
+                            <img src="assets\img\icons8-twitter-circled-48.png" alt=""><a href="#"></a></img>
                         </div>
                     </div>
 
@@ -158,43 +156,15 @@
 
     </div>
 
-    <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
-    
-    <script>
-        // Bắt sự kiện khi hình ảnh được bấm
-        document.getElementById("clickableImage").addEventListener("click", function() {
-            // Chuyển đến trang hoặc tab mới
-            window.location.href = "https://www.example.com"; // Thay thế địa chỉ URL bằng trang mà bạn muốn chuyển đến.
-        });
-    </script> 
-        </div>
-    </div>
-    <-- <script>
-        var cbRemember = document.querySelector(".checkbox-remember")
-        cbRemember.addEventListener("change", function () {
-            if (cbRemember.checked) {
-                // Checkbox đã được chọn
-                cbRemember.classList.add("checked");
-                console.log(cbRemember)
-                console.log("check")
-            } else {
-                // Checkbox đã bị bỏ chọn
-                cbRemember.classList.remove("checked");
-                console.log(cbRemember)
-                console.log("uncheck")
-            }
-        });
-    </script>-->
+    <script >
+         var createAccountBtn = document.querySelector('.btn .btn-create-account');
 
-    <script>
-        var createAccountBtn = document.querySelector('.btn .btn-create-account');
-
-        createAccountBtn.addEventListener("click", function () {
+         createAccountBtn.addEventListener("click", function () {
             window.location.href = "/signup";
 
         })
 
-
+      
 
 
         function signup(event) {
@@ -229,13 +199,10 @@
 
                 console.log(response);
                 // Check if the response indicates a successful login and a redirection
-                {
-                    {
-                        !-- if (response.ok && response.redirected) {
-                            window.location.href = response.json().redirectUrl;
-
-                        } --}
-                }
+                {{!-- if (response.ok && response.redirected) {
+                    window.location.href = response.json().redirectUrl;
+                    
+                } --}}
 
                 // Optional: You can handle the data returned from the server if needed
                 const data = await response.json();
