--- a/views/partials/headerUser.hbs
+++ b/views/partials/headerUser.hbs
@@ -48,6 +48,12 @@
                             Edit Profile
                         </a>
                     </li>
+                    <li class="profile-dropdown-list-item">
+                        <a href="/user/changePassword">
+                            <i class="fa-solid fa-list"></i>
+                            Change password
+                        </a>
+                    </li>
 
                     <li class="profile-dropdown-list-item">
                         <a href="/user/premium">
@@ -61,7 +67,7 @@
                             User Modes
                         </a>
                     </li>
-                    <hr />
+                    <hr>
 
                     <li class="profile-dropdown-list-item">
                         <a href="/logout">
