--- a/views/tutormode/tutormode.hbs
+++ b/views/tutormode/tutormode.hbs
@@ -20,6 +20,10 @@
             <br>
         </h3>
         <h3 class="wrapper-mode">
+            <a href="/tutor/changePassword"><i class="ri-arrow-right-s-fill"></i>Change Password</a>
+            <br>
+        </h3>
+        <h3 class="wrapper-mode">
             <a href="/tutor/create"><i class="ri-arrow-right-s-fill"></i>Create course</a>
             <br>
         </h3>
