--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -73,9 +73,9 @@
                         <div class="text-data pd-20-0">Or you can join with</div>
 
                         <div class="login-other-method">
-                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="#"></a></img>
-                            <img src="assets\img\icons8-facebook-48.png" alt=""><a href="#"></a></img>
-                            <img src="assets\img\icons8-twitter-circled-48.png" alt=""><a href="#"></a></img>
+                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="#"></a></img><img
+                                src="assets\img\icons8-facebook-48.png" alt=""><a href="#"></a></img><img
+                                src="assets\img\icons8-twitter-circled-48.png" alt=""><a href="#"></a></img>
                         </div>
                     </div>
 
@@ -155,6 +155,34 @@
     </div>
 
     </div>
+
+    <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
+    
+    <script>
+        // Bắt sự kiện khi hình ảnh được bấm
+        document.getElementById("clickableImage").addEventListener("click", function() {
+            // Chuyển đến trang hoặc tab mới
+            window.location.href = "https://www.example.com"; // Thay thế địa chỉ URL bằng trang mà bạn muốn chuyển đến.
+        });
+    </script> 
+        </div>
+    </div>
+    <-- <script>
+        var cbRemember = document.querySelector(".checkbox-remember")
+        cbRemember.addEventListener("change", function () {
+            if (cbRemember.checked) {
+                // Checkbox đã được chọn
+                cbRemember.classList.add("checked");
+                console.log(cbRemember)
+                console.log("check")
+            } else {
+                // Checkbox đã bị bỏ chọn
+                cbRemember.classList.remove("checked");
+                console.log(cbRemember)
+                console.log("uncheck")
+            }
+        });
+    </script>-->
 
     <script >
          var createAccountBtn = document.querySelector('.btn .btn-create-account');
