--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -1644,3 +1644,36 @@ i.fas.fa-play-circle {
 .wrap input[type="radio"] {
     margin-left: 10px !important;
 }
+
+.page-category .star {
+    position: absolute;
+    top: 4px;
+    right: 0;
+    z-index: 1;
+    color: #fff;
+    display: flex;
+    background-color: #2bcbba;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.page-category div[class*="star-"] {
+    font-size: 16px;
+    color: #ccc;
+
+    padding: 0 0px;
+}
+
+.page-category div[class*="star-"]:before {
+    content: '\2605';
+
+}
+
+.page-category div[class*="star-"] {
+    color: #ffcc00;
+}
+
+.page-category div[class*="star-"] {
+    padding: 0 2px;
+}
