--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -196,6 +196,9 @@
                                                     <div class="thumbnail">
                                                         <img src="/images/{{this.tutor.avatar}}" alt="">
                                                     </div>
+                                                    <div class="star"><span>{{ round this.average}} </span>
+                                                        <div class="star-"></div>
+                                                    </div>
                                                     <div class="label"><span>-{{percent this.discount
                                                             this.price}}%</span></div>
                                                 </div>
@@ -204,14 +207,7 @@
                                                     <h2 class="dot-title"><a href="">Môn học: {{this.name}}</a>
                                                         <h2 class="dot-title"><a href="">Tên giảng viên:
                                                                 {{this.tutor.fullname}}</a>
-
                                                         </h2>
-                                                        <i class="ri-star-fill"></i>
-                                                        <i class="ri-star-fill"></i>
-                                                        <i class="ri-star-fill"></i>
-                                                        <i class="ri-star-fill"></i>
-                                                        <i class="ri-star-fill"></i>
-
                                                         <div class="product-price">
                                                             <p class="before"> {{this.price}}VNĐ</p>
                                                             <p class="current">{{this.discount}}VNĐ</p>
